Adicionando mecanismo de 'part' (Closes: 302).
...permitindo que uma contribuição possa ser "dividida" em várias
contribuições distintas. Se uma contribuição p (id=2) "é parte" de uma
outra T (id=1), basta informar o valor "1" no campo "part" da
contribuição p e esta será visualmente disposta abaixo de T. Ainda, p é
aprovada automaticamente.

Além disso, ao criar uma nova contribuição pelo formulário no wordpress,
se um ID para "part" for informado, esta nova contribuição será
automaticamente aprovada.

Por fim, contribuições "part" possuem como background color um verde
mais intenso.

--- a/static/css/contrib.css
+++ b/static/css/contrib.css
@@ -11,6 +11,10 @@
     background-color:#FFE6E6;
 }
 
+.wpgd-part-approved {
+    background-color:#A9FFD1;
+}
+
 .wpgd-status-bar {
     position:fixed;
     right: 10px;
