Parts não precisam mais serem aprovadas de imediato.
 - Retornando null em wpgd_govp_get_contrib() ao não encontrar
   contribuição.

 - Usando css classes para identificar aprovado/desaprovado mas
   desacoplado com o background color.

 - Deixando de verificar nos rows da tabela se a contribuição existe
   (não funciona, visto que a tabela é paginada). Essa chegagem está
   sendo feita agora pelo lado do PHP.

 - Retirado código que reposicionava as linhas da tabela dinamicamente
   em JS: o código em PHP faz o mesmo, só precisa de um .reload() na
   página.

--- a/static/css/contrib.css
+++ b/static/css/contrib.css
@@ -3,15 +3,15 @@
     height: 200px;
 }
 
-.wpgd-approved {
+.wpgd-approved-bg {
     background-color:#E0FFD1;
 }
 
-.wpgd-disapproved {
+.wpgd-disapproved-bg {
     background-color:#FFE6E6;
 }
 
-.wpgd-part-approved {
+.wpgd-part-bg {
     background-color:#A9FFD1;
 }
 
