Adicionando grafico tempo X votos (Closes: #314)

--- a/templates/admin/govp/stats.html
+++ b/templates/admin/govp/stats.html
@@ -15,4 +15,10 @@
   <div
      id="chart_bythemedate" data='{{ chart_bythemedate|raw }}'
      style="width:700px; height:250px;"></div>
+
+  <h3>Votes received by day</h3>
+  <div
+     id="chart_votesbyday" data='{{ chart_votebyday|raw }}'
+     style="width:700px; height:250px;"></div>
+
 </div>
