Fazendo o botão "Remove" na listagem de vídeos funcionar (Closes: #323)

--- a/templates/admin/videos/listing.html
+++ b/templates/admin/videos/listing.html
@@ -32,7 +32,8 @@
                  title="Edit this item">Edit</a> |
             </span>
             <span class="trash">
-              <a href="#" title="Remove this item">Remove</a>
+              <a href="admin.php?page=gd-videos-remove&video_id={{ video.id }}"
+                 title="Remove this item">Remove</a>
             </span>
           </div>
         </td>
