--- a/templates/admin/videos/listing.html
+++ b/templates/admin/videos/listing.html
@@ -1,5 +1,8 @@
 <div class="wrap">
   <h2>Videos <a class="add-new-h2" href="admin.php?page=gd-videos-add">Add New</a></h2>
+  <ul class="subsubsub">
+    <li class="all"><a class="current" href="edit.php?post_type=post">All <span class="count">({{listing|length}})</span></a> |</li>
+  </ul>
 
   <table class="wp-list-table widefat fixed audiences" cellspacing="0">
     <thead>
