--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -211,6 +211,12 @@
             <p>A user visible text that describes the video</p>
           </div>
 
+          <div class="form-field form-required">
+            <label>Subtitle</label>
+            <input type="text" name="subtitle" id="subtitle" value="{{ fields.subtitle }}">
+          </div>
+
+
           <div class="form-field">
             <label>Date</label>
             <input type="text" name="date" id="date" class="date"
